...
                }
            }

            // 3. Start/Play Button
            VStack(spacing: 50) {
                if !isPlaying {
                    CustomHeader(config: .init(title: appState.localized("Hole in the Wall")))
                        .accessibilityIdentifier("holeInTheWallTitle")
                }

                VStack(spacing: 40) {
                    if !isPlaying {
                        Button(action: {
...
